--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,11 @@ layout: default
 <h1>{{ page.title }}</h1>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<p class="view" style="color: #267CB9">by {{ page.author | default: site.author }}</p>
 {% if page.tags %}
-<small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+<small style="color: #267CB9">tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
+<hr style="color: lightgray">
 
 {{content}}
 
